--- a/css/main.css
+++ b/css/main.css
@@ -87,12 +87,65 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-/* --------------------------- Base Header - Footer Styles ---------------------------- */
+/* GLOBAL STYLES */
+
+html {
+  font-size: 16px;
+
+}
+
+body {
+  font-family: 'Opens Sans', sans-serif;
+  font-size: 1.5em;
+  text-align: left;
+}
+
+ul,
+ol {
+  list-style-type: none;
+}
+
+a {
+  color: #e2e3ed;
+  text-decoration: none;
+}
+
+h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.875em;
+
+}
+
+h3,
+h4 {
+  font-family: 'Poppins', sans-serif;
+  margin: 20px 0;
+  font-size: 1.125em;
+
+}
+
+p {
+  font-size: .875;
+  line-height: 1.285;
+}
+
+img {
+  background-image: url("C:\Users\tyler\Unplugged\img\unplugged-retreat-features.jpg") alt="group of teenagers on the floor";
+}
+
+
+address {
+  font-style: normal;
+
+}
 
 .content-wrapper {
   width: 90%;
   margin: 50px 0;
 }
+
+/* --------------------------- Base Header - Footer Styles ---------------------------- */
+
 
 header,
 footer {
@@ -280,13 +333,6 @@ aside {
   margin-bottom: 50px;
 }
 
-@media only screen and (min-width: 768px) {
-  /*Tablet styles here */
-}
-
-@media only screen and (min-width: 1200px) {
-  /* Desktop styles here */
-}
 
 
 
