--- a/css/main.css
+++ b/css/main.css
@@ -95,8 +95,6 @@ html {
 }
 
 body {
-  background: url(unpluggedlogo.png);
-  background-size: 35%;
   font-family: 'Opens Sans', sans-serif;
   color: #e2e3ed;
   font-size: 1em;
@@ -106,11 +104,17 @@ body {
 ul,
 ol {
   list-style-type: none;
+  background: url(unpluggedlogo.png);
+  background-size: 5px;
 }
 
 a {
+  font-weight: 500;
   color: #e2e3ed;
-  text-decoration: none;
+  text-decoration: underline;
+  font-size: 3em;
+  display: flex;
+  flex-direction: column;
 }
 
 h2 {
@@ -143,11 +147,6 @@ h4 {
   background-color: #b21e49;
 }
 
-img {
-  width: 100%;
-  background-image: url(unplugged-retreat-features.jpg);
-}
-
 
 address {
   font-style: normal;
@@ -155,6 +154,9 @@ address {
 }
 
 p {
+  justify-content: space-between;
+  display: flex;
+  flex-flow: column;
   font-size: .875;
   line-height: 1.285;
 }
@@ -250,6 +252,7 @@ footer .copyright {
 /* Hero Area */
 
 .hero-area {
+  background-image:url(unplugged-retreat.jpg);
   background-size: cover;
   background-position: center;
   min-height: 500px;
@@ -259,7 +262,6 @@ footer .copyright {
 }
 
 .hero-area h1 {
-  background: url(unplugged-retreat.jpg);
   font-size: 2.25em;
   font-family: 'Poppins', Helvetica, Arial, sans-serif;
   font-weight: 500;
@@ -306,33 +308,40 @@ input[type=button] {
 /* Features */
 
 .features {
-  background: url('unplugged-retreat-features.png');
-  background-size: cover;
-  background-position: center;
+  background-color:hsl(133, 67%, 44%);
   display: flex;
   justify-content: center;
-  flex-flow: row wrap;
+  flex-direction: column wrap;
 }
+
 
 .features h2 {
   margin-bottom: 60px;
+  text-align: center;
 }
 
-.features article {
+.features-items  {
+  display: flex;
+  flex-basis: auto;
+  position: relative;
+  font-weight: 600;
   width: 63%;
   margin: 30px 0;
 }
 
-.features .features-items {
+
+.features-items {
+  background-color:#999;
+  color:white;
   display: flex;
+  flex-basis: auto;
   justify-content: center;
   align-items: center;
-  flex-flow: row wrap;
 }
 
 .features p {
   text-align: center;
-  margin: 0;
+  justify-content: flex-start;
 }
 
 /* Reviews */
