--- a/css/main.css
+++ b/css/main.css
@@ -87,78 +87,60 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-/* GLOBAL STYLES */
+/* General Styles */
 
 html {
   font-size: 16px;
-
 }
 
 body {
-  font-family: 'Opens Sans', sans-serif;
-  color: #e2e3ed;
   font-size: 1em;
+  font-family: 'Open Sans', sans-serif;
+  color: #e2e3ed;
   text-align: left;
 }
 
 ul,
 ol {
   list-style-type: none;
-  background: url(unpluggedlogo.png);
-  background-size: 5px;
+  margin: 0;
 }
 
 a {
-  font-weight: 500;
   color: #e2e3ed;
-  text-decoration: underline;
-  font-size: 3em;
-  display: flex;
-  flex-direction: column;
+  text-decoration: none;
 }
 
 h2 {
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   font-size: 1.875em;
-
+  margin: 0;
 }
 
 h3,
 h4 {
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
-  margin: 20px 0;
   font-size: 1.125em;
-}
-
-.btn {
-  background-color: #ff1256;
-  border: none;
-  color: #fff;
-  font-weight: bold;
-  text-transform: uppercase;
-  line-height: 1.6em;
-  text-align: center;
-  box-shadow: 2px 2px 0px #DADADA;
-}
-
-.btn:hover {
-  background-color: #b21e49;
-}
-
-
-address {
-  font-style: normal;
-
+  margin: 20px 0;
 }
 
 p {
-  justify-content: space-between;
-  display: flex;
-  flex-flow: column;
-  font-size: .875;
+  font-size: .875em;
   line-height: 1.285;
+}
+
+img {
+  width: 100%;
+}
+
+figure {
+  margin: 0;
+}
+
+address {
+  font-style: normal;
 }
 
 .content-wrapper {
@@ -166,8 +148,7 @@ p {
   margin: 50px 0;
 }
 
-/* --------------------------- Base Header - Footer Styles ---------------------------- */
-
+/* -------------------- Base Header - Footer Styles -------------------- */
 
 header,
 footer {
@@ -183,21 +164,30 @@ header {
 }
 
 header .content-wrapper {
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  margin: 0;
+}
+
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 .header-divider {
   background: #3a3a3a;
-  width: 100%;
   height: 1px;
+  width: 100%;
   margin: 10px 0 20px 0;
 }
 
 header nav {
+  width: 60%;
   font-size: 1.125em;
   font-weight: 700;
   text-transform: uppercase;
@@ -205,16 +195,20 @@ header nav {
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
-  width: 60%;
 }
 
 header nav ul {
+  width: 100%;
   display: flex;
   justify-content: space-around;
-  width: 100%;
+}
+
+header nav ul li {
+  font-size: 1.125em;
 }
 
 footer {
+  text-align: center;
   flex-direction: column;
 }
 
@@ -238,9 +232,17 @@ footer .social-icons {
 }
 
 footer .social-icons p {
+  background-color: #527158;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+footer .social-icons p i {
+  font-size: 1.3125em;
 }
 
 footer .copyright {
@@ -252,7 +254,7 @@ footer .copyright {
 /* Hero Area */
 
 .hero-area {
-  background-image:url(unplugged-retreat.jpg);
+  background: url(../img/unplugged-retreat.jpg);
   background-size: cover;
   background-position: center;
   min-height: 500px;
@@ -304,44 +306,41 @@ input[type=button] {
   text-transform: uppercase;
 }
 
-
 /* Features */
 
 .features {
-  background-color:hsl(133, 67%, 44%);
+  background: url('../img/unplugged-retreat-features.jpg');
+  background-size: cover;
+  background-position: center;
   display: flex;
   justify-content: center;
-  flex-direction: column wrap;
+  flex-flow: row wrap;
 }
-
 
 .features h2 {
   margin-bottom: 60px;
-  text-align: center;
 }
 
-.features-items  {
-  display: flex;
-  flex-basis: auto;
-  position: relative;
-  font-weight: 600;
+.features article {
   width: 63%;
   margin: 30px 0;
 }
 
-
-.features-items {
-  background-color:#999;
-  color:white;
+.features .features-items {
   display: flex;
-  flex-basis: auto;
   justify-content: center;
   align-items: center;
+  flex-flow: row wrap;
+}
+
+.features i {
+  font-size: 3.75em;
+  margin-bottom: 40px;
 }
 
 .features p {
   text-align: center;
-  justify-content: flex-start;
+  margin: 0;
 }
 
 /* Reviews */
@@ -375,14 +374,7 @@ input[type=button] {
   flex-flow: row wrap;
 }
 
-.map-container {
-  position: relative;
-  padding-bottom: 75%;
-  height: 0;
-  overflow: hidden;
-}
-
-.map-container figure {
+.map figure {
   width: 100%;
   height: 0;
   padding-bottom: 125%;
@@ -390,12 +382,12 @@ input[type=button] {
   position: relative;
 }
 
-.map-container iframe {
+.map iframe {
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
 }
 
 .contact-section {
@@ -439,10 +431,13 @@ input[type=button] {
   margin-bottom: 50px;
 }
 
+.faq-content {
+  margin-bottom: 50px;
+}
+
 .faq-content h4 {
   line-height: 1.333;
 }
-
 
 
 
